# HPCDaemon

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/hpcdaemon/: cli.py
