[project]
name = "hpcdaemon"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
dependencies = []

[tool.uv.extra-build-dependencies]
hpcdaemon = ["uv"]

[project.scripts]
hpcdaemon = "hpcdaemon.cli:main"

[build-system]
requires = ["uv-build"]
build-backend = "uv.build"