[project]
name = "hpcdaemon"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hpcd-cli = "hpcdaemon.cli:main"

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"
